@@ -3,7 +3,10 @@
 DH_AUTO_OPTIONS := -v -Smakefile --parallel
 stampfile       := debian/build-stamp
 
-export DEB_BUILD_MAINT_OPTIONS=hardening=+all
+DEB_BUILD_MAINT_OPTIONS := hardening=+all
+DPKG_EXPORT_BUILDFLAGS  := 1
+
+include /usr/share/dpkg/buildflags.mk
 
 include /usr/share/dpkg/architecture.mk
 
